# bbschem

./: .gitignore  CMakeLists.txt  README.md  configure.ac
.github/workflows/: ccpp.yml  codeql-analysis.yml
src/: Makefile.am  bbsch.gresource.c  bbsch.gresource.ui  main.c
src/ext/: CMakeLists.txt  bbextensions.c  bbextensions.h
src/gedaplugin/: CMakeLists.txt  bbarctool.c  bbarctool.h  bbattributetool.c  bbblocktool.c  bbboxtool.c  bbboxtool.h  bbbustool.c  bbbustool.h  bbcircletool.c  bbgedaarcfactory.c  bbgedablockfactory.c  bbgedablockfactory.h  bbgedaboxfactory.c  bbgedabusfactory.c  bbgedabusfactory.h  bbgedacirclefactory.c  bbgedaeditor.c  bbgedaeditor.h  bbgedaeditor.ui  bbgedafactory.c  bbgedafactory.h  bbgedaitemfactory.c  bbgedalinefactory.c  bbgedalinefactory.h  bbgedanetfactory.c  bbgedanetfactory.h  bbgedaopener.c  bbgedaopener.h  bbgedapathfactory.c  bbgedapathfactory.h  bbgedapinfactory.c  bbgedaplugin.c  bbgedaplugin.gresource.ui  bbgedaplugin.h  bbgedapluginregister.c  bbgedareader.c  bbgedareader.h  bbgedatextfactory.c  bbgedaview.c  (+9 more)
src/gui/: CMakeLists.txt  bbalignmentcombobox.c  bbalignmentcombobox.h  bbalignmentcombobox.ui  bbapplication.c  bbapplication.css  bbapplication.h  bbarctool.c  bbarctool.h  bbarctoolpanel.c  bbarctoolpanel.h  bbarctoolpanel.ui  bbattributeeditor.c  bbattributeeditor.h  bbattributeeditor.ui  bbattributetool.c  bbattributetool.h  bbattributetoolpanel.c  bbattributetoolpanel.h  bbblocktool.c  bbblocktool.h  bbblocktoolpanel.c  bbblocktoolpanel.h  bbblocktoolpanel.ui  bbboxbuilder.c  bbboxbuilder.h  bbboxtool.c  bbboxtoolpanel.c  bbboxtoolpanel.h  bbboxtoolpanel.ui  bbbustool.c  bbbustoolpanel.c  bbbustoolpanel.h  bbbustoolpanel.ui  bbcellrenderercolorswatch.c  bbcellrenderercolorswatch.h  bbchoosetoolaction.c  bbchoosetoolaction.h  bbcirclebuilder.c  bbcirclebuilder.h  (+181 more)
src/gui/.deps/: bbtest-bbapplication.Po  bbtest-bbattributeeditor.Po  bbtest-bbcoloreditor.Po  bbtest-bbcomponentselector.Po  bbtest-bbfillstyleeditor.Po  bbtest-bblinestyleeditor.Po  bbtest-bbmainwindow.Po  bbtest-bbpinpropertyeditor.Po  bbtest-bbtextpropertyeditor.Po
src/gui/actions/: bbcopyaction.c  bbcopyaction.h  bbcopyreceiver.c  bbcopyreceiver.h  bbcutaction.c  bbcutaction.h  bbcutreceiver.c  bbcutreceiver.h  bbdeleteaction.c  bbdeleteaction.h  bbdeletereceiver.c  bbdeletereceiver.h  bbgridsubject.c  bbgridsubject.h  bbnewaction.c  bbnewaction.h  bbopenaction.c  bbopenaction.h  bbopenreceiver.c  bbopenreceiver.h  bbpanaction.c  bbpanaction.h  bbpanpointaction.c  bbpanpointaction.h  bbpasteaction.c  bbpasteaction.h  bbpastereceiver.c  bbpastereceiver.h  bbquitaction.c  bbquitaction.h  bbquitreceiver.c  bbquitreceiver.h  bbredoaction.c  bbredoaction.h  bbredoreceiver.c  bbredoreceiver.h  bbreloadaction.c  bbreloadaction.h  bbrevealaction.c  bbrevealaction.h  (+38 more)
src/gui/actions/types/: bbscalegriddirection.h  bbzoomdirection.h
src/gui/textedit/: bbtexteditor.c  bbtexteditor.h  bbtexteditor.ui
src/lib/: CMakeLists.txt  bbabsolutelineto.c  bbabsolutelineto.h  bbabsolutemoveto.c  bbabsolutemoveto.h  bbadjustablefillstyle.c  bbadjustablefillstyle.h  bbadjustableitemcolor.c  bbadjustableitemcolor.h  bbadjustablelinestyle.c  bbadjustablelinestyle.h  bbangle.c  bbangle.h  bbapplyfunc.c  bbapplyfunc.h  bbattribute.c  bbattribute.h  bbbounds.c  bbbounds.h  bbboundscalculator.c  bbboundscalculator.h  bbcaptype.c  bbcaptype.h  bbclosedshapedrawer.c  bbclosedshapedrawer.h  bbclosepath.c  bbclosepath.h  bbcolor.c  bbcolor.h  bbcolors.h  bbcoord.c  bbcoord.h  bbdashtype.c  bbdashtype.h  bbelectrical.c  bbelectrical.h  bbelectricalbus.c  bbelectricalbus.h  bbelectricalnet.c  bbelectricalnet.h  (+122 more)
src/lib2/: CMakeLists.txt  Edit.cpp  Edit.h  Item.cpp  Item.h  PropertyId.h  Schematic.cpp  Schematic.h  lib2.h
src/lib2/edits/: ApplySetProperty.cpp  ApplySetProperty.h  RevertItemChanges.cpp  RevertItemChanges.h
src/lib2/items/: CircleItem.cpp  CircleItem.h  LineItem.cpp  LineItem.h
src/libtest/: CMakeLists.txt  bbangletest.c  bbcoordtest.c  bbgedatexttest.c  bbpathscannertest.c
tests/: CMakeLists.txt
tests/lib2/: TestCircleItem.cpp  TestSchematic.cpp
tests/lib2/edits/: TestApplySetProperty.cpp
