
add_library(bbschemgui SHARED
        bbapplication.c
        bbapplication.h
        bbarctoolpanel.c
        bbarctoolpanel.h
        bbattributeeditor.c
        bbattributeeditor.h
        bbattributetoolpanel.c
        bbattributetoolpanel.h
        bbblocktoolpanel.c
        bbblocktoolpanel.c
        bbblocktoolpanel.h
        bbblocktoolpanel.h
        bbboxtoolpanel.c
        bbboxtoolpanel.h
        bbbustoolpanel.c
        bbbustoolpanel.h
        bbbustoolpanel.h
        bbcellrenderercolorswatch.c
        bbcellrenderercolorswatch.h
        bbchoosetoolaction.c
        bbchoosetoolaction.h
        bbcircletoolpanel.c
        bbcircletoolpanel.h
        bbcolorcombobox.c
        bbcolorcombobox.h
        bbcoloreditor.c
        bbcoloreditor.h
        bbcomponentselectorplugin.c
        bbcomponentselectorplugin.h
        bbdocumentwindow.c
        bbdocumentwindow.h
        bbdocumentwindowtab.c
        bbdocumentwindowtab.h
        bbdrawingtool.c
        bbdrawingtool.h
        bbdrawingtoolsupport.c
        bbdrawingtoolsupport.h
        bbfillstyleeditor.c
        bbfillstyleeditor.h
        bbfilltypecombobox.c
        bbfilltypecombobox.h
        bbgeneralopener.c
        bbgeneralopener.h
        bbgraphics.c
        bbgraphics.h
        bbgrid.c
        bbgrid.h
        bbgridcontrol.c
        bbgridcontrol.h
        bbgridsubject.c
        bbgridsubject.h
        bbint32combobox.c
        bbint32combobox.h
        bblinestyleeditor.c
        bblinestyleeditor.h
        bblinetool.c
        bblinetool.h
        bblinetoolpanel.c
        bblinetoolpanel.h
        bbmainwindow.c
        bbmainwindow.h
        bbnettool.c
        bbnettool.h
        bbnettoolpanel.c
        bbnewaction.c
        bbnewaction.h
        bbopenaction.c
        bbopenaction.h
        bbpanaction.c
        bbpanaction.h
        bbpandirection.h
        bbpanpointaction.c
        bbpanpointaction.h
        bbpinpropertyeditor.c
        bbpinpropertyeditor.h
        bbpintoolpanel.c
        bbpintoolpanel.h
        bbpropertycombobox.c
        bbpropertycombobox.h
        bbpropertysubject.c
        bbpropertysubject.h
        bbquitaction.c
        bbquitaction.h
        bbreloadaction.c
        bbreloadaction.h
        bbsaveallaction.c
        bbsaveallaction.h
        bbscalegridaction.c
        bbscalegridaction.h
        bbscalegriddirection.h
        actions/bbselectallaction.c
        actions/bbselectallaction.h
        actions/bbselectnoneaction.c
        actions/bbselectnoneaction.h
        bbselecttoolpanel.c
        bbselecttoolpanel.h
        bbshowgridaction.c
        bbshowgridaction.h
        bbsnapactiveaction.c
        bbsnapactiveaction.h
        bbspecificopener.c
        bbspecificopener.h
        bbtextpropertyeditor.c
        bbtextpropertyeditor.h
        bbtexttoolpanel.c
        bbtexttoolpanel.h
        bbtoolchanger.c
        bbtoolchanger.h
        bbtoolfactory.c
        bbtoolfactory.h
        bbtoolpalette.c
        bbtoolpalette.h
        bbtoolstack.c
        bbtoolstack.h
        bbtoolsubject.c
        bbtoolsubject.h
        bbzoomdirection.h
        bbzoomdirection.h
        bbzoomextentsaction.c
        bbzoomextentsaction.h
        bbzoominaction.c
        bbzoominaction.h
        bbzoomoutaction.c
        bbzoomoutaction.h
        bbzoompointaction.c
        bbzoompointaction.h
        bbzoomsubject.c
        bbzoomsubject.h
        bbzoomtoolpanel.c
        bbzoomtoolpanel.h
        bbtextcontrol.h
        bbtextcontrol.c
        bbalignmentcombobox.c
        bbalignmentcombobox.h
        actions/bbcopyaction.c
        actions/bbcopyaction.h
        actions/bbcopyreceiver.c
        actions/bbcopyreceiver.h
        actions/bbcutaction.c
        actions/bbcutaction.h
        actions/bbcutreceiver.c
        actions/bbcutreceiver.h
        actions/bbdeleteaction.c
        actions/bbdeleteaction.h
        actions/bbdeletereceiver.c
        actions/bbdeletereceiver.h
        actions/bbpasteaction.c
        actions/bbpasteaction.h
        actions/bbpastereceiver.c
        actions/bbpastereceiver.h
        actions/bbredoaction.c
        actions/bbredoaction.h
        actions/bbredoreceiver.c
        actions/bbredoreceiver.h
        actions/bbrevealaction.c
        actions/bbrevealaction.h
        actions/bbrevealreceiver.c
        actions/bbrevealreceiver.h
        actions/bbsaveaction.c
        actions/bbsaveaction.h
        actions/bbsaveasaction.c
        actions/bbsaveasaction.h
        actions/bbsavereceiver.c
        actions/bbsavereceiver.h
        actions/bbundoaction.c
        actions/bbundoaction.h
        actions/bbundoreceiver.c
        actions/bbundoreceiver.h
        actions/bbselectreceiver.c
        actions/bbdeletereceiver.h
        )
