
add_library(bbschemgui SHARED
        actions/bbcopyaction.c
        actions/bbcopyaction.h
        actions/bbcopyreceiver.c
        actions/bbcopyreceiver.h
        actions/bbcutaction.c
        actions/bbcutaction.h
        actions/bbcutreceiver.c
        actions/bbcutreceiver.h
        actions/bbdeleteaction.c
        actions/bbdeleteaction.h
        actions/bbdeletereceiver.c
        actions/bbdeletereceiver.h
        actions/bbdeletereceiver.h
        actions/bbgridsubject.c
        actions/bbgridsubject.h
        actions/bbnewaction.c
        actions/bbnewaction.h
        actions/bbopenaction.c
        actions/bbopenaction.h
        actions/bbpanaction.c
        actions/bbpanaction.h
        actions/bbpanpointaction.c
        actions/bbpanpointaction.h
        actions/bbpasteaction.c
        actions/bbpasteaction.h
        actions/bbpastereceiver.c
        actions/bbpastereceiver.h
        actions/bbquitaction.c
        actions/bbquitaction.h
        actions/bbquitreceiver.c
        actions/bbquitreceiver.h
        actions/bbredoaction.c
        actions/bbredoaction.h
        actions/bbredoreceiver.c
        actions/bbredoreceiver.h
        actions/bbreloadaction.c
        actions/bbreloadaction.h
        actions/bbrevealaction.c
        actions/bbrevealaction.h
        actions/bbrevealreceiver.c
        actions/bbrevealreceiver.h
        actions/bbsaveaction.c
        actions/bbsaveaction.h
        actions/bbsaveallaction.c
        actions/bbsaveallaction.h
        actions/bbsaveasaction.c
        actions/bbsaveasaction.h
        actions/bbsavereceiver.c
        actions/bbsavereceiver.h
        actions/bbscalegridaction.c
        actions/bbscalegridaction.h
        actions/bbselectallaction.c
        actions/bbselectallaction.h
        actions/bbselectnoneaction.c
        actions/bbselectnoneaction.h
        actions/bbselectreceiver.c
        actions/bbshowgridaction.c
        actions/bbshowgridaction.h
        actions/bbsnapactiveaction.c
        actions/bbsnapactiveaction.h
        actions/bbundoaction.c
        actions/bbundoaction.h
        actions/bbundoreceiver.c
        actions/bbundoreceiver.h
        actions/bbzoomextentsaction.c
        actions/bbzoomextentsaction.h
        actions/bbzoominaction.c
        actions/bbzoominaction.h
        actions/bbzoomoutaction.c
        actions/bbzoomoutaction.h
        actions/bbzoompointaction.c
        actions/bbzoompointaction.h
        actions/bbzoomreceiver.c
        actions/bbzoomreceiver.h
        actions/types/bbpandirection.h
        actions/types/bbscalegriddirection.h
        actions/types/bbzoomdirection.h
        actions/types/bbzoomdirection.h
        bbalignmentcombobox.c
        bbalignmentcombobox.h
        bbapplication.c
        bbapplication.h
        bbarctoolpanel.c
        bbarctoolpanel.h
        bbattributeeditor.c
        bbattributeeditor.h
        bbattributetoolpanel.c
        bbattributetoolpanel.h
        bbblocktoolpanel.c
        bbblocktoolpanel.c
        bbblocktoolpanel.h
        bbblocktoolpanel.h
        bbboxtoolpanel.c
        bbboxtoolpanel.h
        bbbustoolpanel.c
        bbbustoolpanel.h
        bbbustoolpanel.h
        bbcellrenderercolorswatch.c
        bbcellrenderercolorswatch.h
        bbchoosetoolaction.c
        bbchoosetoolaction.h
        bbcircletoolpanel.c
        bbcircletoolpanel.h
        bbcolorcombobox.c
        bbcolorcombobox.h
        bbcoloreditor.c
        bbcoloreditor.h
        bbcomponentselectorplugin.c
        bbcomponentselectorplugin.h
        bbdocumentwindow.c
        bbdocumentwindow.h
        bbdocumentwindowtab.c
        bbdocumentwindowtab.h
        bbdrawingtool.c
        bbdrawingtool.h
        bbdrawingtoolsupport.c
        bbdrawingtoolsupport.h
        bbfillstyleeditor.c
        bbfillstyleeditor.h
        bbfilltypecombobox.c
        bbfilltypecombobox.h
        bbgeneralopener.c
        bbgeneralopener.h
        bbgraphics.c
        bbgraphics.h
        bbgrid.c
        bbgrid.h
        bbgridcontrol.c
        bbgridcontrol.h
        bbint32combobox.c
        bbint32combobox.h
        bblinestyleeditor.c
        bblinestyleeditor.h
        bblinetool.c
        bblinetool.h
        bblinetoolpanel.c
        bblinetoolpanel.h
        bbmainwindow.c
        bbmainwindow.h
        bbnettool.c
        bbnettool.h
        bbnettoolpanel.c
        bbpinpropertyeditor.c
        bbpinpropertyeditor.h
        bbpintoolpanel.c
        bbpintoolpanel.h
        bbpropertycombobox.c
        bbpropertycombobox.h
        bbpropertysubject.c
        bbpropertysubject.h
        bbselecttoolpanel.c
        bbselecttoolpanel.h
        bbspecificopener.c
        bbspecificopener.h
        bbtextcontrol.c
        bbtextcontrol.h
        bbtextpropertyeditor.c
        bbtextpropertyeditor.h
        bbtexttoolpanel.c
        bbtexttoolpanel.h
        bbtoolchanger.c
        bbtoolchanger.h
        bbtoolfactory.c
        bbtoolfactory.h
        bbtoolpalette.c
        bbtoolpalette.h
        bbtoolstack.c
        bbtoolstack.h
        bbtoolsubject.c
        bbtoolsubject.h
        bbzoomtoolpanel.c
        bbzoomtoolpanel.h
        actions/bbsaveallreceiver.c
        actions/bbsaveallreceiver.h
        )
