

add_library(bblib
        bbabsolutelineto.c
        bbabsolutelineto.h
        bbabsolutemoveto.c
        bbabsolutemoveto.h
        bbadjustablefillstyle.c
        bbadjustablefillstyle.h
        bbadjustableitemcolor.c
        bbadjustableitemcolor.h
        bbadjustablelinestyle.c
        bbadjustablelinestyle.h
        bbangle.c
        bbangle.h
        bbbounds.c
        bbbounds.h
        bbboundscalculator.c
        bbboundscalculator.h
        bbcaptype.c
        bbcaptype.h
        bbclosepath.c
        bbclosepath.h
        bbcoord.c
        bbcoord.h
        bbdashtype.c
        bbdashtype.h
        bbelectricalbus.c
        bbelectricalbus.h
        bbelectricalnet.c
        bbelectricalnet.h
        bbelectricalpin.c
        bbelectricalpin.h
        bberror.c
        bberror.h
        bbfillstyle.c
        bbfillstyle.h
        bbfilltype.c
        bbfilltype.h
        bbgraphicarc.c
        bbgraphicarc.h
        bbgraphicbox.c
        bbgraphicbox.h
        bbgraphiccircle.c
        bbgraphiccircle.h
        bbgraphicline.c
        bbgraphicline.h
        bbgraphicpath.c
        bbgraphicpath.h
        bbhashtable.c
        bbhashtable.h
        bbitemparams.c
        bbitemparams.h
        bbitemrenderer.c
        bbitemrenderer.h
        bblinestyle.c
        bblinestyle.h
        bbparams.c
        bbparams.h
        bbpathcommand.c
        bbpathcommand.h
        bbpred.c
        bbpred.h
        bbqueryfunc.h
        bbrelativelineto.c
        bbrelativelineto.h
        bbrelativemoveto.c
        bbrelativemoveto.h
        bbschematic.c
        bbschematic.h
        bbschematicitem.c
        bbschematicitem.h
        bbsweep.c
        bbsweep.h
        bbuniversalblock.c
        bbuniversalblock.h
        bbuniversaltext.c
        bbuniversaltext.h
        bbvaluecount.c
        bbvaluecount.h
        bblibrary.h
        bbpintype.h
        bbcolors.h
        )
