

add_library(bblib
        bbabsolutelineto.c
        bbabsolutelineto.h
        bbabsolutemoveto.c
        bbabsolutemoveto.h
        bbadjustablefillstyle.c
        bbadjustablefillstyle.h
        bbadjustableitemcolor.c
        bbadjustableitemcolor.h
        bbadjustablelinestyle.c
        bbadjustablelinestyle.h
        bbangle.c
        bbangle.h
        bbbounds.c
        bbbounds.h
        bbboundscalculator.c
        bbboundscalculator.h
        bbcaptype.c
        bbcaptype.h
        bbclosepath.c
        bbclosepath.h
        bbcoord.c
        bbcoord.h
        bbdashtype.c
        bbdashtype.h
        bbgedabus.c
        bbgedabus.h
        bbgedanet.c
        bbgedanet.h
        bbgedapin.c
        bbgedapin.h
        bberror.c
        bberror.h
        bbfillstyle.c
        bbfillstyle.h
        bbfilltype.c
        bbfilltype.h
        bbgedaarcfactory.c
        bbgedaarcfactory.h
        bbgedaboxfactory.c
        bbgedaboxfactory.h
        bbgedabusfactory.c
        bbgedabusfactory.h
        bbgedacirclefactory.c
        bbgedacirclefactory.h
        bbgedafactory.c
        bbgedafactory.h
        bbgedaitemfactory.c
        bbgedaitemfactory.h
        bbgedalinefactory.c
        bbgedalinefactory.h
        bbgedanetfactory.c
        bbgedanetfactory.h
        bbgedapinfactory.c
        bbgedapinfactory.h
        bbgedaversion.c
        bbgedaversion.h
        bbgedaarc.c
        bbgedaarc.h
        bbgedabox.c
        bbgedabox.h
        bbgedacircle.c
        bbgedacircle.h
        bbgedaline.c
        bbgedaline.h
        bbgedapath.c
        bbgedapath.h
        bbhashtable.c
        bbhashtable.h
        bbitemparams.c
        bbitemparams.h
        bbitemrenderer.c
        bbitemrenderer.h
        bblinestyle.c
        bblinestyle.h
        bbparams.c
        bbparams.h
        bbpathcommand.c
        bbpathcommand.h
        bbpred.c
        bbpred.h
        bbqueryfunc.h
        bbrelativelineto.c
        bbrelativelineto.h
        bbrelativemoveto.c
        bbrelativemoveto.h
        bbschematic.c
        bbschematic.h
        bbgedaitem.c
        bbgedaitem.h
        bbsweep.c
        bbsweep.h
        bbgedablock.c
        bbgedablock.h
        bbgedatext.c
        bbgedatext.h
        bbvaluecount.c
        bbvaluecount.h
        bblibrary.h
        bbpintype.h
        bbcolors.h
        )
