

add_library(bblib
        bbabsolutelineto.c
        bbabsolutelineto.h
        bbabsolutemoveto.c
        bbabsolutemoveto.h
        bbadjustablefillstyle.c
        bbadjustablefillstyle.h
        bbadjustableitemcolor.c
        bbadjustableitemcolor.h
        bbadjustablelinestyle.c
        bbadjustablelinestyle.h
        bbangle.c
        bbangle.h
        bbbounds.c
        bbbounds.h
        bbboundscalculator.c
        bbboundscalculator.h
        bbcaptype.c
        bbcaptype.h
        bbclosepath.c
        bbclosepath.h
        bbcolors.h
        bbcoord.c
        bbcoord.h
        bbdashtype.c
        bbdashtype.h
        bberror.c
        bberror.h
        bbfillstyle.c
        bbfillstyle.h
        bbfilltype.c
        bbfilltype.h
        bbgedaarc.c
        bbgedaarc.h
        bbgedaarcfactory.c
        bbgedaarcfactory.h
        bbgedablock.c
        bbgedablock.h
        bbgedablockfactory.c
        bbgedablockfactory.h
        bbgedabox.c
        bbgedabox.h
        bbgedaboxfactory.c
        bbgedaboxfactory.h
        bbgedabus.c
        bbgedabus.h
        bbgedabusfactory.c
        bbgedabusfactory.h
        bbgedacircle.c
        bbgedacircle.h
        bbgedacirclefactory.c
        bbgedacirclefactory.h
        bbgedafactory.c
        bbgedafactory.h
        bbgedaitem.c
        bbgedaitem.h
        bbgedaitemfactory.c
        bbgedaitemfactory.h
        bbgedaline.c
        bbgedaline.h
        bbgedalinefactory.c
        bbgedalinefactory.h
        bbgedanet.c
        bbgedanet.h
        bbgedanetfactory.c
        bbgedanetfactory.h
        bbgedapath.c
        bbgedapath.h
        bbgedapin.c
        bbgedapin.h
        bbgedapinfactory.c
        bbgedapinfactory.h
        bbgedatext.c
        bbgedatext.h
        bbgedatextfactory.c
        bbgedatextfactory.h
        bbgedaversion.c
        bbgedaversion.h
        bbhashtable.c
        bbhashtable.h
        bbitemparams.c
        bbitemparams.h
        bbitemrenderer.c
        bbitemrenderer.h
        bblibrary.h
        bblinestyle.c
        bblinestyle.h
        bbparams.c
        bbparams.h
        bbpathcommand.c
        bbpathcommand.h
        bbpintype.h
        bbpred.c
        bbpred.h
        bbqueryfunc.h
        bbrelativelineto.c
        bbrelativelineto.h
        bbrelativemoveto.c
        bbrelativemoveto.h
        bbschematic.c
        bbschematic.h
        bbsweep.c
        bbsweep.h
        bbvaluecount.c
        bbvaluecount.h
        bbtextalignment.h
        bbtextpresentation.h
        bbtextvisibility.h
        bbtextalignment.c
        bbtextvisibility.c
        bbtextpresentation.c
        bbtextsize.h
        bbtextsize.c
        bbcolor.c
        bbcolor.h
        bbpintype.c
        bbpinend.c
        bbpinend.h
        bbqueryfunc.c
        bbapplyfunc.c
        bbpathscanner.c
        bbpathscanner.h
        bbpathparser.c
        bbpathparser.h
        bbgedapathfactory.h
        bbgedapathfactory.c
        bbattribute.c
        bbattribute.h
        bbelectrical.c
        bbelectrical.h
        )
