add_library(bblib2
        lib2.h
        Item.cpp
        Item.h
        PropertyId.h
        Schematic.cpp
        Schematic.h
        items/CircleItem.cpp
        items/CircleItem.h
        items/LineItem.cpp
        items/LineItem.h
        edits/ApplySetProperty.cpp
        edits/ApplySetProperty.h
        edits/RevertItemChanges.cpp
        edits/RevertItemChanges.h)

